<resources>
    <string name="app_name">EPM</string>


    <string name="login_username">  请输入用户名</string>
    <string name="login_password">  请输入密码</string>
    <string name="btn_login">登陆</string>


    <string name="user_username">账户名:</string>
    <string name="user_password">密码:</string>
    <string name="user_andpassword">确认密码:</string>
    <string name="user_email">邮箱:</string>
    <string name="user_tell">电话:</string>


    <string name="my_device">我的设备</string>
    <string name="data_statistics">数据统计</string>
    <string name="message">消息</string>
    <string name="my_account">我的账户</string>
    <string name="tv_status">设备状态</string>
    <string name="tv_order">订单</string>
    <string name="tv_equipment_details">设备详情</string>
    <string name="tv_control">控制</string>
    <string name="edt_search">请输入订单编号搜索</string>
    <string name="btn_search">搜索</string>
    <string name="create_time">创建时间:</string>
    <string name="order_number">订单号:</string>
    <string name="equipment_number">设备编号:</string>
    <string name="print_way">打印方式:</string>
    <string name="status">状态:</string>
    <string name="printing_material">打印材料:</string>
    <string name="late_delivery">最晚交期:</string>
    <string name="order_author">订单作者:</string>
    <string name="note">备注:</string>
    <string name="order_numbers">订单编号:</string>
    <string name="equipment_name">设备名称:</string>
    <string name="order_msg">订单信息:</string>
    <string name="file_msg">文件信息:</string>
    <string name="liquid_height">位液高度:</string>
    <string name="power_size">功率大小:</string>
    <string name="initialize_state">初始化状态</string>
    <string name="tv_start_time">开始时间</string>
    <string name="tv_remain_time">剩余时间</string>
    <string name="tv_current_height">当前高度:</string>
    <string name="tv_all_height">总高度:</string>
    <string name="tv_support_speed">支撑速度:</string>
    <string name="tv_fill_speed">填充速度:</string>
    <string name="tv_outline_speed">轮廓速度:</string>
    <string name="tv_scanlinespace">扫描线间距:</string>
    <string name="Equipment_operation_records">设备操作记录</string>
    <string name="error_message">错误信息</string>
    <string name="check_printqueue">查看打印队列</string>

    <string name="tv_printoperation">点击选择打印任务，可对队列中打印任务做如下操作</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
